--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -1084,7 +1084,7 @@
 
 		if (juego != null)
 		{
-			Herramientas.Deseados.CambiarEstado(null, UserManager, usuario, juego, false, drm);
+			await Herramientas.Deseados.CambiarEstado(null, UserManager, usuario, juego, false, drm);
 		}
 
 		if (deseadosOfertas.Count > 0)
