--- a/pepeizqs deals web/Pages/Componentes/Cuenta/CuentaIsthereanydeal.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/CuentaIsthereanydeal.razor
@@ -1,4 +1,5 @@
 ﻿@using Juegos
+@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Identity
 @using System.Text.Json
@@ -9,44 +10,41 @@
 
 <div style="display: flex; flex-direction: column; gap: 40px;">
 	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
-		<label style="font-size: 18px; margin-bottom: 20px;">@Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal3", "Account")</label>
+		<label style="font-size: 18px; margin-bottom: 20px;">@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "AccountIsthereanydeal")</label>
 
 		<div>
 			<ul style="display: flex; flex-direction: column; gap: 20px; margin: 0px;">
 				<li>
-					@Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal7", "Account")
+					@Herramientas.Idiomas.BuscarTexto(idioma, "String7", "AccountIsthereanydeal")
 				</li>
 
 				<li>
-					@Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal6", "Account") <a href="https://isthereanydeal.com/waitlist/#!:backup">Waitlist/Backup</a>
+					@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "AccountIsthereanydeal") <a href="https://isthereanydeal.com/waitlist/#!:backup">Waitlist/Backup</a>
 				</li>
 
 				<li>
-					@Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal4", "Account")
+					@Herramientas.Idiomas.BuscarTexto(idioma, "String4", "AccountIsthereanydeal")
 				</li>
 
 				<li>
-					@Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal5", "Account")
+					@Herramientas.Idiomas.BuscarTexto(idioma, "String5", "AccountIsthereanydeal")
 				</li>
 			</ul>
 		</div>
 	</div>
 
 	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; display: flex; flex-direction: column;">
-		@if (string.IsNullOrEmpty(jsonDeseados) == false)
-		{
-			<button @onclick="CargarDeseados" class="boton" style="font-size: 18px; width: fit-content; margin-bottom: 40px; cursor: pointer; padding: 15px 30px;">
-				@Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal1", "Account")
-			</button>
-		}
-
-		<label style="margin-bottom: 10px;">@Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal2", "Account")</label>
-
-		<textarea class="entrada-texto" value="@jsonDeseados" @oninput="TextoCambiaDeseados" />
+		<div style="font-size: 18px;">@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "AccountIsthereanydeal")</div>
+		<hr/>
+		
+		<label class="boton" style="cursor: pointer; font-size: 16px; width: fit-content; padding: 10px 15px;">
+			<InputFile OnChange="CargarFichero" accept=".json" hidden />
+			@Herramientas.Idiomas.BuscarTexto(idioma, "String2", "AccountIsthereanydeal")
+		</label>
 
 		@if (añadidos > 0)
 		{
-			<label style="margin-top: 20px;">@string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "Isthereanydeal8", "Account"), añadidos)</label>
+			<label style="margin-top: 20px;">@string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String8", "AccountIsthereanydeal"), añadidos)</label>
 		}
 	</div>
 </div>
@@ -60,7 +58,6 @@
 
 	private Usuario usuario = new Usuario();
 
-	private string jsonDeseados = string.Empty;
 	private List<string> listaDeseados = new List<string>();
 	private int añadidos = 0;
 
@@ -69,14 +66,16 @@
 		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
 	}
 
-	private void TextoCambiaDeseados(ChangeEventArgs texto)
-	{
-		jsonDeseados = texto.Value.ToString();
-	}
-
-	private async void CargarDeseados()
+	private async void CargarFichero(InputFileChangeEventArgs e)
 	{
 		añadidos = 0;
+
+		IBrowserFile fichero = e.File;
+		long maximoTamaño = 512000;
+		var buffer = new byte[fichero.Size];
+
+		await fichero.OpenReadStream(maxAllowedSize: maximoTamaño).ReadAsync(buffer);
+		string jsonDeseados = System.Text.Encoding.UTF8.GetString(buffer);
 
 		listaDeseados = Herramientas.Isthereanydeal.ImportarDeseados(jsonDeseados);
 
