--- a/pepeizqs deals web/Pages/Contact.cshtml
+++ b/pepeizqs deals web/Pages/Contact.cshtml
@@ -28,22 +28,9 @@
 
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Contact");
 	Layout = "/Pages/Shared/_Layout.cshtml";
+
+    @(await Html.RenderComponentAsync<Componentes.Secciones.Contacto>(RenderMode.ServerPrerendered, new
+    {
+        idioma = idioma
+    }))
 }
-
-<div style="font-size: 22px; text-align: left; margin-bottom: 30px;">
-	@Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Contact")
-</div>
-
-<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; gap: 20px;">
-	<div>
-		<i class="fa-solid fa-circle-info" style="font-size: 25px;"></i>
-	</div>
-	<div>
-		@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "Contact")
-	</div>	
-</div>
-
-<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; margin-top: 30px; margin-bottom: 40px;">
-	@Herramientas.Idiomas.BuscarTexto(idioma, "String2", "Contact")
-	admin@pepeizqdeals.com
-</div>
