--- a/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
@@ -345,7 +345,7 @@
         mostrarPendientes = true;
         estiloPendientes = fondo;
 
-        ActualizarMensajePendientes(BaseDatos.Pendientes.Buscar.TiendasCantidad(null) + BaseDatos.Pendientes.Buscar.SuscripcionCantidad(null) + BaseDatos.Pendientes.Buscar.StreamingCantidad(null));
+        ActualizarMensajePendientes(BaseDatos.Pendientes.Buscar.TiendasCantidad(null) + BaseDatos.Pendientes.Buscar.SuscripcionCantidad(null) + BaseDatos.Pendientes.Buscar.StreamingCantidad(null) + BaseDatos.Pendientes.Buscar.PlataformaCantidad(null));
     }
 
     #endregion
