--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
@@ -205,23 +205,23 @@
             </div>
         </button>
 
-        <button @onclick="@(e => MostrarIsthereanydeal(e))" class="boton-pestañas">
+        <button @onclick="@(e => MostrarAmazon(e))" class="boton-pestañas">
             <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
-                <img src="/imagenes/otros/itad.webp" style="max-width: 30px; max-height: 30px;" />
+                <img src="/imagenes/drm/amazongames.webp" style="max-width: 30px; max-height: 30px;" />
 
                 <div>
                     <div>
-                        @Herramientas.Idiomas.BuscarTexto(idioma, "String19", "Account")
+                        @Herramientas.Idiomas.BuscarTexto(idioma, "String26", "Account")
                     </div>
 
                     <div style="margin-top: 5px; font-size: 14px;">
-                        @Herramientas.Idiomas.BuscarTexto(idioma, "String20", "Account")
+                        @Herramientas.Idiomas.BuscarTexto(idioma, "String27", "Account")
                     </div>
                 </div>
             </div>
         </button>
 
-        <button @onclick="@(e => MostrarAmazon(e))" class="boton-pestañas">
+        <button @onclick="@(e => MostrarIsthereanydeal(e))" class="boton-pestañas">
             <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
                 <img src="/imagenes/otros/itad.webp" style="max-width: 30px; max-height: 30px;" />
 
